<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MenuResTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fontSet">字体设置</string>
    <string name="font_10">10号字体</string>
    <string name="font_12">12号字体</string>
    <string name="font_14">14号字体</string>
    <string name="font_16">16号字体</string>
    <string name="font_18">18号字体</string>
    <string name="color">颜色设置</string>
    <string name="red_title">红色</string>
    <string name="blue_title">蓝色</string>
    <string name="green_title">绿色</string>
    <string name="xml_menu">XML控制的菜单</string>

</resources>
